feat: ANGLE 添加 Vulkan 后端支持 (Android)
- 新增 vulkan feature 到 angle port, 包含 Vulkan 构建配置
- Android 平台使用 volk 动态加载 Vulkan 函数, 避免 API 24 符号缺失
- 添加 SPIRV 编译器、VMA、volk 等依赖源文件
- 添加 VMA 动态 Vulkan 函数补丁 (002-fix-vma-dynamic-vulkan-functions.patch)
- 更新 unofficial-angle-config.cmake 传递 Vulkan 依赖
- vcpkg.json 启用 angle[vulkan] feature

--- a/vcpkg/ports/angle/cmake-buildsystem/CMakeLists.txt
+++ b/vcpkg/ports/angle/cmake-buildsystem/CMakeLists.txt
@@ -11,6 +11,10 @@ if (NOT WINDOWS_STORE AND NOT USE_METAL AND NOT IOS)
     set(USE_OPENGL ON)
 endif()
 
+if (NOT DEFINED USE_VULKAN)
+    set(USE_VULKAN OFF)
+endif()
+
 if(MSVC)
     add_compile_options(/d2guard4 /Wv:18 /guard:cf /permissive /bigobj)
     add_link_options(/guard:cf)
@@ -119,6 +123,7 @@ include(GLESv2.cmake)
 include(D3D.cmake)
 include(GL.cmake)
 include(Metal.cmake)
+include(Vulkan.cmake)
 
 set(no_gl_prototypes
     GL_GLES_PROTOTYPES=0
