build: 添加 extrans、textrender 与 alphamovie 编译目标

--- a/cpp/plugins/CMakeLists.txt
+++ b/cpp/plugins/CMakeLists.txt
@@ -20,6 +20,9 @@ target_sources(${PROJECT_NAME} PUBLIC
     fftgraph.cpp
     LayerExBase.cpp
     xp3filter.cpp
+    extrans.cpp
+    textrender.cpp
+    alphamovie.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
